--- a/extensions/persist/pom.xml
+++ b/extensions/persist/pom.xml
@@ -22,10 +22,16 @@
     </dependency>
 
     <!-- Use javax.transaction.Transactional annotation from JTA1.2 Definition -->
+    <!--<dependency>-->
+        <!--<groupId>javax.transaction</groupId>-->
+        <!--<artifactId>javax.transaction-api</artifactId>-->
+        <!--<version>1.2</version>-->
+    <!--</dependency>-->
+    <!-- replaced by -->
     <dependency>
-        <groupId>javax.transaction</groupId>
-        <artifactId>javax.transaction-api</artifactId>
-        <version>1.2</version>
+        <groupId>org.jboss.spec.javax.transaction</groupId>
+        <artifactId>jboss-transaction-api_1.2_spec</artifactId>
+        <version>1.0.0.Final</version>
     </dependency>
 
     <dependency>
