--- a/extensions/persist/pom.xml
+++ b/extensions/persist/pom.xml
@@ -28,7 +28,7 @@
         <artifactId>javax.transaction-api</artifactId>
         <version>1.2</version>
     </dependency>
-    <!-- test if the following lib is build with java 6: (negativ) -->
+    <!-- the following could be considered als replacement but is also based on java 7: -->
     <!--<dependency>-->
         <!--<groupId>org.jboss.spec.javax.transaction</groupId>-->
         <!--<artifactId>jboss-transaction-api_1.2_spec</artifactId>-->
