Next try to set repository

--- a/pom.xml
+++ b/pom.xml
@@ -106,14 +106,42 @@ See the Apache License Version 2.0 for the specific language governing permissio
   <distributionManagement>
     <!-- override the parent's directory to point to the canonical place, and use https. -->
     <repository>
-        <id>mlp-releases</id>
+        <id>mlp-nexus</id>
         <url>http://webapp-entw.mlp.de/nexus/content/repositories/releases</url>
     </repository>
     <snapshotRepository>
-        <id>mlp-snapshots</id>
+        <id>mlp-nexus</id>
         <url>http://webapp-entw.mlp.de/nexus/content/repositories/snapshots</url>
     </snapshotRepository>
   </distributionManagement>
+
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id>mlp-nexus</id>-->
+            <!--<name>MLP Nexus Repository Public</name>-->
+            <!--<url>http://webapp-entw.mlp.de/nexus/content/groups/public</url>-->
+            <!--<releases>-->
+                <!--<enabled>true</enabled>-->
+            <!--</releases>-->
+            <!--<snapshots>-->
+                <!--<enabled>true</enabled>-->
+            <!--</snapshots>-->
+        <!--</repository>-->
+    <!--</repositories>-->
+
+    <!--<pluginRepositories>-->
+        <!--<pluginRepository>-->
+            <!--<id>mlp-nexus</id>-->
+            <!--<name>MLP Nexus Repository Public</name>-->
+            <!--<url>http://webapp-entw.mlp.de/nexus/content/groups/public</url>-->
+            <!--<releases>-->
+                <!--<enabled>true</enabled>-->
+            <!--</releases>-->
+            <!--<snapshots>-->
+                <!--<enabled>true</enabled>-->
+            <!--</snapshots>-->
+        <!--</pluginRepository>-->
+    <!--</pluginRepositories>-->
 
   <modules>
     <module>core</module>
